syntax = "proto3";

package protobuf;
option go_package = "./protobuf";
import "Message.proto";

option java_multiple_files = true;
option java_package = "com.joxrays.godroidsvr.resolver";
option java_outer_classname = "SmsResolverEntry";

service SmsResolver {
  rpc GetAllBasicSmsInfo(Empty) returns (StringList) {}
  rpc GetSmsInfoList(String) returns (SmsInfoList) {}
  rpc SendSms(StringPair) returns (Empty) {}
}